Fix alignment of progress bar and static value in `property-usage` component (#4837)

--- a/src/app/shared/components/property-usage/style.scss
+++ b/src/app/shared/components/property-usage/style.scss
@@ -15,9 +15,13 @@
 @use 'mixins';
 @use 'variables';
 
+:host {
+  display: flex;
+}
+
 .property-usage-bar {
   @include mixins.size(280px, 6px, true);
 
   border-radius: variables.$border-radius;
-  margin: 8px 0;
+  margin: 6px 0;
 }
